[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lrp"
authors = [
    {name = "Kamyar R", email = "notPublicYet@gmail.com"},
]

description = "App to predict chance of lightning strike based on environmental factors."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["lightning", "machine learning", "risk", "probability"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",

]
dependencies = [
    "requests",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "torch>=2.3.1",
]

dynamic = ["version"]
